--- a/estilos.css
+++ b/estilos.css
@@ -41,21 +41,36 @@ background-position:center;
     justify-items: center;
     border: 1px solid #000;
 
-    grid-template-columns: 200px 200px 200px 200px;
 }
 
-.grid .a {
+.grid.nivel1 {
+    grid-template-columns: 100px 100px 100px 100px ;
+}
+
+.grid.nivel2 {
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px;
+}
+
+.grid.nivel1 .carta {
+    height: 100px;
+    width: 100px;
+}
+
+.grid.nivel2 .carta {
+    height: 50px;
+    width: 50px;
+}
+
+.grid .carta {
     background-color: aliceblue;
-    height: 200px;
-    width: 200px;
+
     border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.grid .a img {
-
-    width: 150px;
-    height: 140px;
+#pokemon-objetivo {
+    height: 200px;
+    width: 200px;
 }
